# m306-proxmox-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yaml  flake.nix  frontend-api.yml  openapi.yaml
.github/workflows/: ci.yml
config/: app_settings.json
generated-api/: .openapi-generator-ignore  Cargo.toml  README.md
generated-api/.openapi-generator/: FILES
generated-api/src/: lib.rs  models.rs
generated-api/src/apis/: config.rs  groups.rs  health.rs  infrastructure.rs  mod.rs  nodes.rs  storage.rs  users.rs  vms.rs
generated-api/src/server/: mod.rs
scripts/: generate-api.sh  proxmox_test.sh
src/: app.rs  config.rs  db.rs  errors.rs  main.rs  routes.rs  state.rs
src/clients/: environment.rs  mod.rs  nodes.rs  proxmox.rs  umgebung.rs
src/domain/: admin_user.rs  mod.rs  model.rs
src/web/: dto.rs  mod.rs
src/web/handlers/: auth.rs  config.rs  dropdown.rs  environment.rs  health.rs  mod.rs  nodes.rs  proxmox.rs  settings.rs  umgebung.rs
src/web/mw/: auth_basic.rs  mod.rs
src/web/routes/: mod.rs  proxmox_routes.rs
