[package]
name = "loomox-api"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Proxmox management backend API"
edition = "2024"

[features]
default = ["server"]
server = []

[dependencies]
async-trait = "0.1"
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["attributes"] }

[dev-dependencies]
tracing-subscriber = "0.3"
